Update Pertama (Register dan Login)

--- a/app/register-page.html
+++ b/app/register-page.html
@@ -12,19 +12,24 @@
 
 <body class="d-flex justify-content-center align-items-center kotak">
     <div class="login p-4">
-        <h1 class="text-center judul fw-bold">Login Form</h1>
+        <h1 class="text-center judul fw-bold">Register Form</h1>
         <form>
             <div class="mb-3">
-                <input type="email" class="form-control input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
+                <input type="email" class="form-control input" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Email">
+            </div>
+            <div class="mb-3">
+                <input type="text" class="form-control input" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Nama Lengkap">
             </div>
             <div class="mb-3">
                 <input type="password" placeholder="Password" class="form-control input" id="exampleInputPassword1">
             </div>
-            <button type="submit" class="btn tombol-login w-100"><i class="fa-solid fa-right-to-bracket me-2"></i>Login</button>
+            <button type="submit" class="btn tombol-login w-100"><i class="fa-solid fa-right-to-bracket me-2"></i>Register</button>
         </form>
         <div class="container">
-            <p class="text-center mb-3 mt-3">Lupa Password?</p>
-            <p class="text-center">Belum Punya Akun? <a href="register-page.html" class="register">Register</a></p>
+            <p class="text-center mb-3 mt-3">Powered By Frontier Soft.</p>
+            <p class="text-center">Sudah Punya Akun? <a href="login-page.html" class="register">Login</a></p>
         </div>
     </div>
 
